# PILI_stealth_killer

pili_stealth_ws/install/: local_setup.sh  setup.sh
pili_stealth_ws/install/command_interfaces/lib/command_interfaces/: client  server
pili_stealth_ws/install/command_interfaces/share/command_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
pili_stealth_ws/install/command_interfaces/share/command_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  command_interfaces__rosidl_typesupport_cExport-noconfig.cmake  (+12 more)
pili_stealth_ws/install/more_interfaces/share/more_interfaces/: package.sh  package.xml
pili_stealth_ws/install/userPkg/lib/userPkg/: command_service_client  command_service_server
pili_stealth_ws/install/userPkg/share/userPkg/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
pili_stealth_ws/log/: latest_build
pili_stealth_ws/src/: command  command.cpp  data  data.cpp  data_1  data_1.cpp  example  example.cpp
pili_stealth_ws/src/command_interfaces/: CMakeLists.txt
pili_stealth_ws/src/command_interfaces/msg/: Commands.msg  MyCommand.msg
pili_stealth_ws/src/command_interfaces/src/: command_client.cpp  command_service.cpp  data.cpp  send_command_client.cpp  send_command_service.cpp
pili_stealth_ws/src/command_interfaces/srv/: Command.srv  MyCommand.srv
pili_stealth_ws/src/more_interfaces/: CMakeLists.txt
pili_stealth_ws/src/more_interfaces/msg/: Command.msg
pili_stealth_ws/src/record/: data.csv  data_20240804_122643.csv  data_20240804_122747.csv
pili_stealth_ws/src/userPkg/: CMakeLists.txt  package.xml
pili_stealth_ws/src/userPkg/src/: UartReceiver.cpp  UartReceiverPublisher.cpp  UartSender.cpp  command_service_client.cpp  command_service_server.cpp
(+53 files in other folders)
